Sat Nov  2 07:08:43 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/logger.rb: Inter-process locking for log rotation
	  Current implementation fails log rotation on multi process env.
	  by sonots <sonots@gmail.com>
	  https://github.com/ruby/ruby/pull/428 fix GH-428 [Bug #9046]

Fri Nov  1 23:24:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (wmap_mark_map): mark live objects only, but delete zombies.
	  [ruby-dev:47787] [Bug #9069]

Fri Nov  1 22:45:54 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (struct heap_page, gc_page_sweep, gc_sweep): Refactoring for
	  performance. Add before_sweep condition to heap_page structure.

	* gc.c (rb_gc_force_recycle): Use before_sweep member.

	* gc.c (heap_is_before_sweep, is_before_sweep): Remove. They have not
	  already been used.

Fri Nov  1 22:20:28 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (make_deferred): Refactoring. Collect codes which should be
	  atomic.

	* gc.c (make_io_deferred, obj_free, rb_objspace_call_finalizer,
	  gc_page_sweep): Correspond to the above.

Fri Nov  1 21:40:35 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (typedef struct rb_objspace): Refactoring. Move some members
	  into profile member.

	* gc.c (newobj_of): Correspond to the above.

	* gc.c (finalize_list): Ditto.

	* gc.c (objspace_live_num): Ditto.

	* gc.c (gc_page_sweep): Ditto.

	* gc.c (rb_gc_force_recycle): Ditto.

	* gc.c (garbage_collect_body): Ditto.

	* gc.c (rb_gc_count): Ditto.

	* gc.c (gc_stat): Ditto.

	* gc.c (gc_prof_set_heap_info): Ditto.

	* gc.c (gc_profile_dump_on): Ditto.

Fri Nov  1 20:53:56 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_scrub): fix typo, should yield invalid byte
	  sequence to be scrubbed.  reported by znz at IRC.

Fri Nov  1 17:25:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (is_live_object): finalizer may not run because of lazy-sweep.
	  [ruby-dev:47786] [Bug #9069]

Fri Nov  1 16:55:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
